Update faculty page
Updated the faculty page to the 22-23 faculty, and changed the name to faculty
and staff. Added sections of faculty and subtitles and year since they've been
at Oak Hill.

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -1,154 +1,191 @@
 ---
-- name: Robert Loren Thoburn, Jr., OH since 1997
-  bio:
-    "Robert Thoburn II, founder and School Headmaster. Robert and his wife Sheila
-    spend most of their time living and working in Herndon.  They have five sons and
-    four daughters as well as seven grandchildren. Robert is a member of Providence
-    Church, Lynchburg. He earned a B.A. at Grove City College studying business as
-    well as Austrian economics under Dr. Hans F. Sennholz and holds a Juris Doctor
-    from Pepperdine University School of Law.  Courses taught in past years:  Omnibus
-    (history, government, economics)."
-  image: "/assets/images/faculty/robert-thoburn.png"
-- name: Michael Harkin, OH since 2021
-  bio:
-    "Michael Harkin is the Principal of the Oak Hill - Lynchburg Campus as well
-    as the Senior Humanities instructor.  Mr. Harkin was the founder and former Headmaster
-    of Tidewater Classical Academy in Virginia Beach and served as a Captain in the
-    US Marine Corps.  He holds a BA in Liberal Arts and Culture from New Saint Andrews
-    College, a BA in Classics from the University of Idaho, and an MBA from Regent
-    University.  Mr. Harkin is also President of FeO, Inc and is a member of Providence
-    Church, Lynchburg. "
-  image: "/assets/images/faculty/mike-harkin.png"
-- name: Abigail Thoburn, OH since 2020
-  bio:
-    Abigail Faith Thoburn is our School Office Manager. She is working remotely
-    as she finishes her senior year at New Saint Andrews College in Moscow, Idaho.
-    Abigail plays violin and loves boba milk tea.
-  image: "/assets/images/faculty/abigail-thoburn.png"
-- name: Adam Thoburn, OH since 2020
-  bio:
-    Adam Jacob Thoburn teaches high school science and is our Herndon Campus Assistant
-    Principal. He married his wife, Cherie, while a junior in college. They have 2
-    children attending Oak Hill as well as 2 more still at home. Adam is a graduate
-    of New Saint Andrews College where he studied Natural History with Riot and the
-    Dance producer Gordon Wilson. Adam is the founder of <a href="https://www.facebook.com/TorbjornWoodworking"
-    target="_blank">Thoburn Woodworking</a>
-  image: "/assets/images/faculty/adam-thoburn.png"
-- name: Robert Thoburn III, OH since 2020
-  bio:
-    Robert III is the Lynchburg Campus Assistant Principal and teaches music, practicum,
-    Algebra I and calculus. He graduated from New Saint Andrews with a B.A. in Liberal
-    Arts and Culture as well as a Music Certification. He plays cello and is currently
-    earning his Kodaly music teaching certificate. Robert and his wife Sharon are
-    members of Providence Church in Lynchburg.
-  image: "/assets/images/faculty/robert-thoburn-3.png"
-- name: Autumn Aardsma, OH since 2021
-  bio:
-    Autumn Aardsma is our Herndon Campus Office Administrator. She has 2 sons and
-    3 daughters attending OH. A former Christian school instructor herself, Autumn
-    is well equipped to help our teachers.
-  image: "/assets/images/faculty/autumn-aardsma.png"
-- name: Megan Okimoto, OH since 2021
-  bio:
-    Megan Okimoto is our Lynchburg Campus Office Administrator and serves as a
-    co-teacher. She holds a B.A. in French from Miami University, has 3 children attending
-    OH and is a member of Providence Church, Lynchburg.
-  image: "/assets/images/faculty/megan-okimoto.png"
-- name: David Sabin, OH since 2016
-  bio:
-    David Sabin teaches English and Boys’ PE and Junior High courses. Born into
-    a family of missionaries to Botswana and Guatamala, he taught international students
-    for 15 years and became a fluent speaker of Spanish. Mr. Sabin participates in
-    music ministry, prayer team and a food bank at his congregation, <a href="https://www.gracetabernaclevirginia.com/"
-    target="_blank">Grace Tabernacle Church</a>, in Ashburn.  He is married with two
-    children and holds a B.S. in English Education and a master’s in Educational Administration
-    from Pensacola Christian College.
-  image: "/assets/images/faculty/david-sabin.png"
-- name: Sharon Thoburn, OH since 2020
-  bio:
-    Sharon Thoburn teaches Latin. She holds an A.A. in Liberal Arts and Culture
-    from New Saint Andrews College. She spent time working at Eagle Cap Chalets and
-    her family's other hotel in beautiful Enterprise, Oregon and is married to Robert
-    Thoburn III.
-  image: "/assets/images/faculty/sharon-thoburn.png"
-- name: Seth Thoburn, OH since 2018
-  bio:
-    Seth Thoburn teaches advanced Latin. He is a senior at New Saint Andrews College.
-    He also works as a Full Stack Developer at Treefort and does coding and IT work
-    for Canon Press and Oak Hill.
-  image: "/assets/images/faculty/seth-thoburn.png"
-- name: Arelis Gil, OH since 2014
-  bio:
-    Arelis Gil earned an M.Ed. and B.A. from the University of Nevada, Las Vegas.
-    She spent six years at Palo Verde High School in Las Vegas teaching honors history
-    and other courses. She and her husband attend Centreville Baptist.  Mrs. Gil taught
-    at OH and currently serves as our Athletic Director and College Counselor.
-  image: assets/images/faculty/arelis-gil.png
-- name: Allen Aardsma, OH since 2005
-  bio:
-    Adirondack Al returned this year from his studio in Long Lake, New York to
-    teach at Oak Hill. Mr. A <a href="https://www.pondsidestudio.net/my-music.html"
-    target="_blank">is a musician</a> as well as a woodcarver par excellence who brings
-    great character instruction to his elementary students. He taught and served as
-    a principal for 20 years in Christian schools. Mr. A earned a Bachelor's of Bible
-    Research studying at Seeway Baptist Bible Institute and Bible Research International.
-  image: "/assets/images/faculty/allen-aardsma.png"
-- name: Robin Aardsma, OH since 2005
-  bio:
-    Robin Aardsma has much experience in teaching, including fifteen years in Christian
-    schools as well as home schooling her own children. She studied history at SUNY
-    Potsdam and Houghton College. She and her husband, Allen, have 5 grandchildren
-    attending Oak Hill. Always full of energy, after teaching all day she can be found
-    walking on a bike trail.
-  image: "/assets/images/faculty/robin-aardsma.png"
-- name: Katherine Culver, OH since 2010
-  bio:
-    Katherine Culver earned an elementary education degree as an honor student
-    at Methodist University. She taught at another ACCS school before coming to Oak
-    Hill. Mrs. Culver and her husband, William, worship at Potomac Hills Presbyterian
-    Church in Leesburg and have two beautiful daughters.
-  image: "/assets/images/faculty/katherine-culver.png"
-- name: Sheila Key Thoburn, OH since 1997
-  bio:
-    Sheila Key Thoburn was influential in creating a classical curriculum at Oak
-    Hill over the years. She grew up in Arlington and is a great mother to her and
-    Robert’s children.  She thoroughly enjoys reading almost any book and, when she
-    can, runs an Etsy shop which can be found [here](https://www.etsy.com/people/SKT74).
-    Mrs. Thoburn serves as Director of Curriculum and teaches elementary school.
-  image: "/assets/images/faculty/sheila-thoburn.png"
-- name: Zachary Aardsma, OH since 2021
-  bio:
-    Zachary Aardsma teaches elementary science classes. He loves science and studied
-    biology at Houghton College. He bikes and used to teach swim lessons.
-  image: "/assets/images/faculty/zach-aardsma.png"
-- name: Justin Sutters, OH since 2018
-  bio:
-    Dr. Justin Sutters is a part-time art instructor at Oak Hill, where his daughters
-    Zoe and Livia attend. He is the Director of the Graduate Art Education program
-    at George Mason University. He attained a PhD in Art Education from the Ohio State
-    University and has extensive K-12 teaching experience including two years in Brazil.
-    He presents his research regularly both nationally and internationally and is
-    published widely. <a href="https://gmu.academia.edu/justinsutters" target="_blank">https://gmu.academia.edu/justinsutters</a>
-  image: assets/images/faculty/justin-sutters.png
-- name: Mary Saka, OH since 2004
-  bio:
-    Mary Saka directs our after care. She greets everyone with a smile. Gardening
-    and sewing and cooking especially interest her, but she loves economics in which
-    she holds undergraduate and graduate degrees. Mrs. Saka belongs to Chantilly Bible
-    Church.
-  image: "/assets/images/faculty/mary-saka.png"
-- name: Nancy Weathers, Kindergarten, OH since 2004
-  bio: ""
-  image: "/assets/images/faculty/nancy-weathers.png"
-- name: Mandy Fournier, Assistant Teacher, OH since 2021
-  bio: ""
-  image: "/assets/images/faculty/mandy-fournier.png"
-- name: Yanet Birehan, Assistant Teacher, OH since 2019
-  bio: ""
-  image: "/assets/images/faculty/yanet-birehan.png"
-- name: Moriah Gonzalez, Junior Kindergarten, OH since 2014
-  bio: ""
-  image: "/assets/images/faculty/moriah-gonzalez.png"
-- name: Nery Washington, Reading and Assistant Teacher, OH since 2019
-  bio: ""
-  image: "/assets/images/faculty/nery-washington.png"
+- title: High School, Grades 7-8, and Administrative
+  persons:
+    - name: Robert Loren Thoburn
+      subtitle: Founder, Headmaster, high school co-teacher
+      ohsince: 1997
+      bio: Robert and his wife Sheila spend most of their time in Herndon. They
+        have 9 children and 9 grandchildren. Robert is a member of Providence Church,
+        Lynchburg and earned a B.A. at Grove City College studying business as well as
+        Austrian economics. He also holds a J.D. from Pepperdine University School of
+        Law.
+      image: "/assets/images/faculty/robert-thoburn.png"
+    - name: Michael Harkin
+      subtitle: Campus Principal and Senior Humanities Instructor
+      ohsince: 2021
+      bio:
+        Mike Harkin is the founder and former Headmaster of Tidewater Classical
+        Academy in Virginia Beach and served as a Captain in the US Marine Corps. He
+        holds a B.A. in Liberal Arts and Culture from New Saint Andrews College, a
+        B.A. in Classics from the University of Idaho, and an MBA from Regent
+        University. Mr. Harkin is also President of FeO, Inc and is a member of
+        Providence Church, Lynchburg.
+      image: "/assets/images/faculty/mike-harkin.png"
+    - name: Megan Okimoto
+      subtitle: Lynchburg Administrator and High School Co-teacher
+      ohsince: 2021
+      bio:
+        Megan Okimoto has a B.A. in French from Miami University. She has 3 children
+        attending OH and is a member of Providence Church, Lynchburg.
+      image: "/assets/images/faculty/megan-okimoto.png"
+    - name: Robert Thoburn III
+      subtitle: High School/Junior High Math and Music
+      ohsince: 2020
+      bio:
+        Robert III serves as an Assistant Principal and teaches music, English, and
+        upper level math. He graduated from New Saint Andrews College with a B.A. in
+        Liberal Arts and Culture as well as a Music Certification. He plays cello
+        and is currently earning his Kodály music teaching certificate. Robert and
+        his wife Sharon have one child and are members of Providence Church in
+        Lynchburg.
+      image: "/assets/images/faculty/robert-thoburn-3.png"
+    - name: Heather Yarashus
+      subtitle: High School/Junior High Science
+      ohsince: 2022
+      bio:
+        Heather Yarashus, B.A. in Chemistry and M.A. in Chemistry from William and
+        Mary, worked as a homeschool science teacher for many years and as a
+        substitute at Chesapeake Bay Governor’s School. She has 8 children and is a
+        member of Sterling Orthodox Presbyterian Church.
+      image: "/assets/images/faculty/heather-yarashus.png"
+    - name: Seth Thoburn
+      subtitle: Junior High and High School Latin
+      ohsince: 2018
+      bio:
+        Seth Thoburn graduated with a B.A. in Liberal Arts and Culture from New
+        Saint Andrews College. At NSA he learned a spoken approach to Latin and
+        studied ancient Hebrew. He is a Full Stack Developer (what is your title?)
+        at Consigncloud.
+      image: "/assets/images/faculty/seth-thoburn.png"
+    - name: David Sabin
+      subtitle: Grades 7/8 and PE
+      ohsince: 2016
+      bio: David Sabin was born into a family of missionaries to Botswana and
+        Guatamala. He taught international students for 15 years and is a fluent
+        speaker of Spanish. He participates in music ministry and prayer team at
+        Grace Tabernacle Church in Ashburn. Mr. Sabin has 4 sons and holds a B.S. in
+        English Education and an M.A. in Educational Administration from Pensacola
+        Christian College.
+      image: "/assets/images/faculty/david-sabin.png"
+    - name: Zachary Aardsma
+      subtitle: Herndon Campus Co-teacher, Math/Science
+      ohsince: 2021
+      bio:
+        “Mr. Z” works as an upper school co-teacher and also teaches Physics and
+        Geometry. He loves science and studied biology at Houghton College. He bikes
+        and worked as a swim instructor.
+      image: "/assets/images/faculty/zach-aardsma.png"
+    - name: Arelis Gil
+      subtitle: Athletic Director and College Counselor
+      ohsince: 2014
+      bio:
+        Arelis Gil earned an M.Ed. and B.A. from the University of Nevada, Las
+        Vegas. She spent six years at Palo Verde High School in Las Vegas teaching
+        honors history and other courses. She and her husband attend Centreville
+        Baptist.
+      image: assets/images/faculty/arelis-gil.png
+    - name: Abigail Thoburn
+      subtitle: Office Manager
+      ohsince: 2020
+      bio:
+        Abigail Faith Thoburn is our School Office Manager. She is working remotely
+        as she finishes her B.A. in Liberal Arts and Culture at New Saint Andrews
+        College in Moscow, Idaho. Abigail plays violin and loves Boba milk tea.
+      image: "/assets/images/faculty/abigail-thoburn.png"
+    - name: Sheila Key Thoburn
+      subtitle: Curriculum Director
+      ohsince: 1997
+      bio:
+        Sheila Key Thoburn was influential in creating a classical curriculum at Oak
+        Hill over the years. She grew up in Arlington and is a great mother to her
+        and Robert’s children. She thoroughly enjoys reading almost any book and,
+        when she can, runs her own Etsy Shop.
+      image: "/assets/images/faculty/sheila-thoburn.png"
+- title: Elementary – Grades 2-6
+  persons:
+    - name: Allen Aardsma
+      subtitle: Grades 5/6
+      ohsince: 2005
+      bio:
+        Adirondack Al returned in 2021 from his studio in Long Lake, New York to
+        teach at Oak Hill. Mr. A is a musician as well as a woodcarver par
+        excellence who brings great character instruction to his elementary
+        students. He taught and served as a principal for 20 years in Christian
+        schools. Mr. A earned a Bachelor’s of Bible Research studying at Seeway
+        Baptist Bible Institute.
+      image: "/assets/images/faculty/allen-aardsma.png"
+    - name: Hannah Miller
+      subtitle: Grade 4
+      ohsince: 2022
+      bio:
+        Hannah Miller joins us this fall after several years teaching in Christian
+        schools. Mrs. Miller holds a B.A. in history from Patrick Henry College. She
+        has a passion for Christ and for elementary school teaching and belongs to
+        Hamilton Baptist Church in Western Loudoun County.
+      image: "/assets/images/faculty/hannah-miller.png"
+    - name: Mandy Fournier
+      subtitle: Grade 3
+      ohsince: 2021
+      bio:
+        Amanda Fournier has worked at schools in various capacities as well as in
+        the children’s ministry at her church, McLean Bible Church. She has 2
+        children at OH and holds a B.A. from the University of Delaware.
+      image: "/assets/images/faculty/mandy-fournier.png"
+    - name: Katherine Culver
+      subtitle: Grade 2
+      ohsince: 2010
+      bio:
+        Katherine Culver earned an elementary education degree as an honor student
+        at Methodist University. She taught at another ACCS school before coming to
+        Oak Hill. Mrs. Culver and her husband, William, worship at Potomac Hills
+        Presbyterian Church in Leesburg and have two beautiful daughters.
+      image: "/assets/images/faculty/katherine-culver.png"
+    - name: Chesney Taylor
+      subtitle: Elementary Science
+      ohsince: 2022
+      bio:
+        Chesney Taylor discovered a real love for science and seeing God in his
+        creation while tutoring with Classical Conversations. She studied teaching
+        and earned a B.S. in History at Pensacola Christian College and earned a
+        J.D. from Regent University.
+      image: "/assets/images/faculty/chesney-taylor.png"
+    - name: Dr. Justin Sutters
+      subtitle: Elementary Art
+      ohsince: 2018
+      bio:
+        Justin Sutters is the art educator at Oak Hill. He is the Director of the
+        Graduate Art Education program at George Mason University and attained a PhD
+        in Art Education from the Ohio State University.
+      image: assets/images/faculty/justin-sutters.png
+- title: JK, Kindergarten, Grade 1 & Extended Day
+  persons:
+    - name: Robin Aardsma
+      subtitle: Grade 1
+      ohsince: 2005
+      bio: ""
+      image: "/assets/images/faculty/robin-aardsma.png"
+    - name: Nancy Weathers
+      subtitle: Kindergarten
+      ohsince: 2004
+      bio: ""
+      image: "/assets/images/faculty/nancy-weathers.png"
+    - name: Claudia Key
+      subtitle: Junior Kindergarten (3’s/4’s) and Elementary Music
+      ohsince: 2005
+      bio: ""
+      image: "/assets/images/faculty/claudia-key.png"
+    - name: Yanet Birehan
+      subtitle: Junior Jr. Kg. Assistant Teacher
+      ohsince: 2019
+      bio: ""
+      image: "/assets/images/faculty/yanet-birehan.png"
+    - name: Mary Saka
+      subtitle: Extended Care
+      ohsince: 2004
+      bio: ""
+      image: "/assets/images/faculty/mary-saka.png"
+    - name: Gina Wisor
+      subtitle: Kindergarten Assistant Teacher
+      ohsince: 2022
+      bio: ""
+      image: ""
