--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -54,8 +54,7 @@
       bio:
         Seth Thoburn graduated with a B.A. in Liberal Arts and Culture from New
         Saint Andrews College. At NSA he learned a spoken approach to Latin and
-        studied ancient Hebrew. He is a Full Stack Developer (what is your title?)
-        at Consigncloud.
+        studied ancient Hebrew. He is a full stack developer at ConsignCloud.
       image: "/assets/images/faculty/seth-thoburn.png"
     - name: David Sabin
       subtitle: Grades 7/8 and PE
