Add image for Gina Wisor

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -187,4 +187,4 @@
       subtitle: Kindergarten Assistant Teacher
       ohsince: 2022
       bio: ""
-      image: ""
+      image: "/assets/images/faculty/gina-wisor.png"
