--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1,23 +1,25 @@
 ---
-year: 2021-22
+year: 2022-23
 events:
-  - date: September 6, 2021
+  - date: September 5, 2022
     event: Labor Day
-  - date: September 7
+  - date: September 6
     event: First Day of School
-  - date: November 22-26
+  - date: November 21-25
     event: Thanksgiving Recess, School Closed
-  - date: December 20, 2021-January 3, 2022
+  - date: December 19, 2022-January 2, 2023
     event: Christmas Recess, School Closed
-  - date: January 4, 2022
-    event: First Day of School in 2022
-  - date: February 21
-    event: Presidents' Day, School Closed
-  - date: April 11-15, April 18
+  - date: January 3, 2023
+    event: First Day of School in 2023
+  - date: January 16, 2023
+    event: King Day, School Closed
+  - date: February 20
+    event: Presidents’ Day, School Closed
+  - date: April 3-7
     event: Easter Recess, School Closed
-  - date: May 27
-    event: Last Day of School for High School
-  - date: May 30
+  - date: May 26
+    event: Last Day of High School
+  - date: May 29
     event: Memorial Day, School Closed
-  - date: June 14
+  - date: June 16
     event: Last Day of School
