--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,5 +45,5 @@
   pages:
     - title: Clubs and Activities
       url: "/clubs-and-activities"
-    - title: Athletics/i-9 Sports
+    - title: Athletics
       url: "/athletics"
