--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -23,9 +23,10 @@
       subtitle: Junior High and High School Latin
       ohsince: 2018
       bio:
-        Seth Thoburn graduated with a B.A. in Liberal Arts and Culture from New
-        Saint Andrews College. At NSA he learned a spoken approach to Latin and
-        studied ancient Hebrew. He is a full stack developer at ConsignCloud.
+        Seth Thoburn graduated <i>cum laude</i> with a B.A. in Liberal Arts and
+        Culture from New Saint Andrews College. At NSA he learned a spoken
+        approach to Latin and studied ancient Hebrew. He is a full stack
+        developer at ConsignCloud.
       image: "/assets/images/faculty/seth-thoburn.png"
     - name: David Sabin
       subtitle: Grades 7/8 and PE
