--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -137,7 +137,7 @@
       bio:
         'Seth Thoburn enjoys just about any language: Latin and Hebrew as well as
         math and programming which he also considers to be languages.  Seth is a
-        full stack developer at <a href="https://consigncloud.com" target="_blank">ConsignCloud</a> and
+        full stack developer at <a href="https://www.facebook.com/ConsignCloud/" target="_blank">ConsignCloud</a> and
         graduated <i>cum laude</i> with a B.A. in Liberal Arts and Culture from New
         Saint Andrews College.'
       image: "/assets/images/faculty/seth-thoburn.png"
