Slight information updates

--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -94,7 +94,7 @@
         Church.
       image: "/assets/images/faculty/chesney-taylor.png"
     - name: Zachary Aardsma
-      subtitle: Assistant Office Manager, Upper School Science and Math, Chess Clubs
+      subtitle: Assistant Office Manager, Upper School Science and Math
       ohsince: 2021
       bio:
         “Mr. Z” works as an upper school co-teacher and also teaches Physics and
@@ -104,7 +104,7 @@
 - title: Physical Education
   persons:
     - name: David Sabin
-      subtitle: PE, Running Club, Junior High History, English and Bible, Enrollment Advisor
+      subtitle: PE, Junior High History, English and Bible, Enrollment Advisor
       ohsince: 2016
       bio: David Sabin was born into a family of missionaries.  He speaks fluent
         Spanish and participates in music ministry and prayer team at Grace
